--- a/bibliografija.bib
+++ b/bibliografija.bib
@@ -44,6 +44,20 @@ http://mirror.datacenter.by/pub/mirrors/CTAN/macros/latex/contrib/biblatex/doc/b
    langid={english},
 }
 
+@misc{TMMi,
+   title={TMMi model. Levels},
+   howpublished={\url{https://www.tmmi.org/tmmi-model/}},
+   year={2017},
+   langid={english},
+}
+
+@misc{agile,
+   title={Agile manifestas},
+   howpublished={http://agilemanifesto.org/iso/lt/manifesto.html}},
+   year={2001},
+   langid={lithuanian},
+}
+
 @inproceedings{Muccini:2012:STM:2663608.2663615,
  author = {Muccini, Henry and Di Francesco, Antonio and Esposito, Patrizio},
  title = {Software Testing of Mobile Applications: Challenges and Future Research Directions},
@@ -96,84 +110,22 @@ month={Feb},}
  publisher = {Springer Publishing Company, Incorporated},
 } 
 
-@article{PvzStraipsnEn,
-    author={A. Surname and B. Tsurname and C. Usurname},
-    title={Article Title},
-    journal={Journal Title},
-    year={2001},
-    volume={IV},
-    pages={3-15},
-    langid={english},
+@article{Paulk:1993:CMM:624600.625307,
+ author = {Paulk, Mark C. and Curtis, Bill and Chrissis, Mary Beth and Weber, Charles V.},
+ title = {Capability Maturity Model, Version 1.1},
+ journal = {IEEE Softw.},
+ issue_date = {July 1993},
+ volume = {10},
+ number = {4},
+ month = jul,
+ year = {1993},
+ issn = {0740-7459},
+ pages = {18--27},
+ numpages = {10},
+ url = {http://dx.doi.org/10.1109/52.219617},
+ doi = {10.1109/52.219617},
+ acmid = {625307},
+ publisher = {IEEE Computer Society Press},
+ address = {Los Alamitos, CA, USA},
+ keywords = {capability maturity model, process-improvement, software engineering, software maintenance, software quality, software-development},
 } 
-
-@inproceedings{PvzKonfLt,
-    author={A. Pavardenis and B. Pavardonis and C. Pavardauskas and D. Pavardinskas},
-    title={Straipsnio pavadinimas},
-    booktitle={Rinkinio pavadinimas},
-    year={2002},
-    publisher={Leidykla},
-    address={Miestas, šalis},
-    pages={3-15},
-}
-
-@inproceedings{PvzKonfEn,
-    author={A. Surname and B. Tsurname and C. Usurname and D. Vsurname},
-    title={Article title},
-    booktitle={Conference book title},
-    year={2002},
-    publisher={Publisher},
-    address={City, country},
-    pages={3-15},
-    langid={english},
-}
-
-@book{PvzKnygLt,  
-    author={A. Pavardenis and B. Pavardonis and C. Pavardauskas},
-    title={Knygos pavadinimas},
-    publisher={Leidykla},
-    year={2003},
-    address={Miestas, šalis},
-    note={172 psl.},
-}
-
-@book{PvzKnygEn,  
-    author={A. Surname and B. Tsurname and C. Usurname},
-    title={Book title},
-    publisher={Publisher},
-    year={2003},
-    address={City, country},
-    note={172 p.},
-    langid={english},
-}
-
-@misc{PvzElPubLt,
-    author={A. Pavardenis and B. Pavardonis and C. Šavardauskas},
-    title={Elektroninės publikacijos pavadinimas},
-    howpublished={\url{http://example.com/kelias/iki/straipsnio.pdf}},
-    year={2004}, 
-    note={45 KB, tikrinta 2015-02-01},
-}
-
-@misc{PvzElPubEn,
-    author={A. Surname and B. Tsurname and C. Usurname},
-    title={Online Source Title},
-    howpublished={\url{http://example.com/path/to/the/article.pdf}},
-    year={2004}, 
-    note={45 KB, accessed 2015-02-01.},
-    langid={english},
-}
-
-@mastersthesis{PvzMagistrLt,
-    author={A. Pavardonis},
-    title={Magistrinio darbo pavadinimas},
-    school={Universiteto pavadinimas},
-    year={2005},
-}
-
-@phdthesis{PvzPhdEn,
-    author={A. Surname},
-    title={Ttitle of PhD thesis},
-    school={Title of university},
-    year={2005},
-    langid={english},
-}
